# AgentMem-OS

./: .env.example  .gitignore  Guide.md  README.md  alembic.ini  config.yaml  pyproject.toml  requirements.txt  setup.sh
agents/: memory_federation.py  namespace_manager.py  trust_network.py
alembic/: env.py
api/: app.py
benchmarks/: eval_harness.py  run_multi_bench.py  token_savings.json
cache/: redis_client.py
cli/: main.py
db/: chroma_client.py  database.py  engine.py  knowledge_graph.py  models.py
llm/: adapters.py  consolidation_engine.py  context_assembler.py  importance_scorer.py  procedural_memory.py  summarizer.py  token_counter.py
storage/: manager.py  store.py  sync.py
tests/: debug_imports.py  test_e2e_claude.py  test_phase1.py  test_phase2.py  test_phase2_db.py  test_phase3_algorithms.py  test_phase4_multiagent.py
web/: index.html
